get post and delete working with basic styling.  Can't get background image to work

--- a/src/components/Isle.css
+++ b/src/components/Isle.css
@@ -14,3 +14,16 @@
 .title {
     margin-top: 150px;
 }
+
+/* body {
+    background-image: url("wallpaper.png");
+    display: absolute;
+    width: 120vw;
+    height: 120vh;
+    background-repeat: no-repeat;
+    background-position: center-center;
+    background-size: cover;
+    opacity: .5;
+    margin: 0;
+    z-index: -5;
+} */
