--- a/src/components/Yoshi.css
+++ b/src/components/Yoshi.css
@@ -9,12 +9,20 @@ button {
 
 .yoshi {
     position: relative;
-    /* display: flex;
-    flex-direction: column; */
+    width: 200px;
+    margin: 20px;
 }
 
 .bomb {
     position: absolute;
     top: -30px;
     right: -30px;
+}
+
+.mushroom {
+    height: 50px;
+    width: 50px;
+    position: absolute;
+    top: -20px;
+    left: -30px;
 }
