--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,7 +3,12 @@ header {
     background-color: rgb(46, 46, 46);
     margin: 0;
     height: 6rem;
+}
 
+.header-logo {
+    margin: 0;
+    width: 300px;
+    height: 80px;
 }
 
 h1 {
@@ -13,11 +18,12 @@ h1 {
 }
 
 nav {
-    background-color: white;
+    background-color: rgb(6, 158, 6);
     display: flex;
     justify-content: space-around;
-    font-size: 3rem;
-    margin-top: 20px;
+    font-size: 2rem;
+    margin-top: 0px;
+    color: white;
 }
 
 .nav-btn {
@@ -31,10 +37,20 @@ nav {
     margin-top: 20px;
 }
 
-.kingdom-btn {
-    font-size: 60%;
+.nav-btn:hover {
+    background-color: rgb(159, 255, 146);
+}
+
+.nest-btn {
+    padding-left: 140px;
 }
 
 a {
     text-decoration: none;
+    color: white;
+    transition: .1s;
+}
+
+a:hover {
+    color: rgb(197, 197, 197);
 }
