--- a/src/components/Nest.css
+++ b/src/components/Nest.css
@@ -53,7 +53,11 @@ button:hover {
     align-items: center;
     margin: 0;
     font-family: 'Modak', cursive;
+    outline: none;
+}
 
+.side-icon:hover {
+    outline: none;
 }
 
 p {
