--- a/src/components/Nest.css
+++ b/src/components/Nest.css
@@ -3,6 +3,13 @@ img {
     height: 240px;
     width: 200px;
     margin-top: 30px;
+    filter: drop-shadow(2mm 2mm .8rem rgb(0, 0, 0));
+}
+
+.square {
+    background-color: green;
+    width: 100px;
+    height: 100px;
 }
 
 .nest {
@@ -16,9 +23,53 @@ img {
     justify-content: space-around;
 }
 
-/* .middle-pic {
+.middle-pic {
+    margin-top: 40px;
+}
+
+.middle-pic:hover {
     transition: 1s;
-} */
+    animation-name: shake;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+@keyframes shake {
+    0% {
+        transform: rotate(0deg)
+    }
+    10% {
+        transform: rotate(5deg);
+    }
+    20% {
+        transform: rotate(0deg);
+    }    
+    30% {
+        transform: rotate(-5deg);
+    }
+    40% {
+        transform: rotate(0deg);
+    }
+    50% {
+        transform: rotate(-5deg);
+    }
+    60% {
+        transform: rotate(5deg);
+    }
+    70% {
+        transform: rotate(-5deg);
+    }
+    80% {
+        transform: rotate(5deg);
+    }
+    90% {
+        transform: rotate(-5deg);
+    }
+    100% {
+        transform: rotate(0deg);
+    }
+}
 
 h3 {
     font-size: 50px;
@@ -34,6 +85,7 @@ h4 {
 button {
     font-size: 30px;
     margin: 0px 40px;
+    margin-top: 30px;
 }
 
 button:hover {
@@ -41,9 +93,17 @@ button:hover {
 }
 
 .yoshi-pic {
-    border-radius: 20px;
-    height: 100px;
-    width: 200px;
+    border-radius: 50%;
+    height: 300px;
+    width: 300px;
+    filter: drop-shadow(2mm 2mm 1rem rgb(0, 0, 0));
+}
+
+.castle-pic {
+    border-radius: 50%;
+    height: 300px;
+    width: 300px;
+    filter: drop-shadow(2mm 2mm 1rem rgb(0, 0, 0));
 }
 
 .side-icon {
@@ -74,16 +134,58 @@ p {
     justify-content: space-around;
 }
 
-.arrow {
-    transform: translate(50px, 0px);
+/* .arrow {
     transition: 1;
-    color: white;
+    color: black;
 }
 
 .arrow:hover {
     color: black;
+} */
+
+.left-arrow {
+    position: absolute;
+    left: -130px;
+    top: 180px;
+    color: white;
+}
+
+.right-arrow {
+    position: absolute;
+    right: -130px;
+    top: 180px;
+    color: white;
 }
 
 .nav-btn {
     font-family: 'Modak', cursive;
+}
+
+/* The alert message box */
+.alert {
+    background-color: #f44336; /* Red */
+    color: white;
+    height: 48px;
+    font-size: 32px;
+    position: absolute;
+    top: 83px;
+    z-index: 2;
+    text-align: center;
+    width: 100vw;
+    transition: 1;
+}
+
+.hatch {
+    animation: hatch-in-keyframes 2s;
+}
+@keyframes hatch-in-keyframes {
+    from {opacity: 0}
+    to {opacity: 1}
+
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.35);
+    }
 }
