--- a/src/components/Yoshi.css
+++ b/src/components/Yoshi.css
@@ -66,3 +66,52 @@ button {
 .right-arrow:hover {
     color: rgba(105, 105, 105, 1);
 }
+
+.shrinkToggle {
+    animation: shrink-in-keyframes .5s;
+    transform: scale(.6);
+}
+@keyframes shrink-in-keyframes {
+
+    0% {
+        transform: scale(1);
+    }
+    20% {
+        transform: scale(.6);
+    }
+    40% {
+        transform: scale(1);
+    }
+    60% {
+        transform: scale(.6);
+    }
+    80% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(.6);
+    }
+}
+
+.normal {
+    animation: normal-in-keyframes .5s;
+    transform: scale(1);
+}
+@keyframes normal-in-keyframes {
+
+    0% {
+        transform: scale(1);
+    }
+    30% {
+        transform: scale(.6);
+    }
+    60% {
+        transform: scale(1);
+    }
+    80% {
+        transform: scale(.6);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
