--- a/src/components/Yoshi.css
+++ b/src/components/Yoshi.css
@@ -23,9 +23,11 @@ button {
 
 .bomb {
     position: absolute;
-    top: 40px;
-    right: -30px;
+    top: 0px;
+    left: 150px;
     transition: .3s;
+    height: 65px;
+    width: 65px;
 }
 
 .bomb:hover {
@@ -36,8 +38,8 @@ button {
     height: 50px;
     width: 50px;
     position: absolute;
-    top: 10px;
-    left: -30px;
+    top: 8px;
+    left: 0px;
     filter: drop-shadow(2mm 2mm .3rem rgb(0, 0, 0));
     transition: .3s;
 }
@@ -46,8 +48,8 @@ button {
     height: 65px;
     width: 65px;
     position: absolute;
-    top: 5px;
-    left: 40px;
+    top: 0px;
+    left: 70px;
     filter: drop-shadow(1mm 1mm .2rem rgb(0, 0, 0));
     transition: .3s;
 }
@@ -123,7 +125,9 @@ button {
     animation-duration: 3s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
-    display: none;
+    filter: drop-shadow(1mm 1mm .2rem rgb(0, 0, 0));
+
+    
 }
 
 .grow {
@@ -154,7 +158,7 @@ button {
         opacity: 0;
     }
     50% {
-        opacity: .7;
+        opacity: .8;
     }
     100%{
         opacity: 0;
