--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -73,6 +73,10 @@ nav {
     background-color: rgb(159, 255, 146);
 }
 
+.query-btn:hover {
+    background-color: rgb(159, 255, 146);
+}
+
 .nest-btn {
     padding-left: 140px;
 }
