--- a/src/components/Isle.css
+++ b/src/components/Isle.css
@@ -17,15 +17,8 @@
     font-family: 'Modak', cursive;
 }
 
-/* body {
-    background-image: url("wallpaper.png");
-    display: absolute;
-    width: 120vw;
-    height: 120vh;
-    background-repeat: no-repeat;
-    background-position: center-center;
-    background-size: cover;
-    opacity: .5;
-    margin: 0;
-    z-index: -5;
-} */
+.query-btn {
+    border: 2px solid black;
+    margin-top: 0px;
+    border-radius: 10px;
+}
