--- a/src/components/Yoshi.css
+++ b/src/components/Yoshi.css
@@ -126,12 +126,12 @@ button {
     animation-iteration-count: infinite;
     animation-timing-function: linear;
     filter: drop-shadow(1mm 1mm .2rem rgb(0, 0, 0));
-
     
 }
 
 .grow {
     /* animation: grow-in-keyframes .5s; */
+    border: none;
     transform: scale(1);
 }
 @keyframes grow-in-keyframes {
